@@ -285,4 +285,9 @@
 	  list (contributed by Kate).
 	* apps/nshlib/nsh_parse.c: CONFIG_NSH_DISABLE_WGET not CONFIG_NSH_DISABLE_GET
 	  in one location (found by Kate).
+	* apps/examples/ostest/prioinherit.c:  Limit the number of test
+	  threds to no more than 3 of each priority.  Bad things happen
+	  when the existing logic tried to created several hundred test
+	  treads!
+
 
